--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "pacman clone ai as a study project",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "watch": "tsc -w"
+    "start": "parcel index.html --open",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -19,10 +18,21 @@
     "dhbw-horb",
     "dhbw"
   ],
-  "author": ["Raqhael", "FabiKl"],
+  "author": [
+    "Raqhael",
+    "FabiKl"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Raqhael/lamai/issues"
   },
-  "homepage": "https://github.com/Raqhael/lamai#readme"
+  "homepage": "https://github.com/Raqhael/lamai#readme",
+  "dependencies": {
+    "@types/p5": "^1.4.3",
+    "p5": "^1.4.2",
+    "parcel-bundler": "^1.3.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.8.4"
+  }
 }
