--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "build": "webpack",
-    "build-dist": "./node_modules/.bin/webpack --config webpack.config.js"
+    "build": "npx webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
