--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,13 +1,13 @@
 {
-	"version": "2.0.0",
 	"tasks": [
 		{
 			"type": "npm",
 			"script": "build",
+			"path": "frontend",
 			"group": "build",
 			"problemMatcher": [],
-			"label": "npm: build",
-			"detail": "webpack"
+			"label": "npm: build - frontend",
+			"detail": "npx webpack --config webpack.config.js"
 		}
 	]
 }
