--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
+    "start": "",
+    "prestart": "npm run build",
     "build": "npx webpack --config webpack.config.js"
   },
   "repository": {
