--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "start": "",
+    "start": "npx http-server -s",
     "prestart": "npm run build",
     "build": "npx webpack --config webpack.config.js"
   },
