nicer package json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently --kill-others -n Frontend,Backend \"cd frontend && npm run start\" \"cd backend && npm run dev\""
+    "dev": "concurrently --kill-others -n Frontend,Backend,WebServer \"cd frontend && npm run build\" \"cd backend && npm run dev\" \"cd frontend && npm run start\""
   },
   "repository": {
     "type": "git",
