--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,14 @@
             "webRoot": "${workspaceFolder}/frontend",
             "sourceMaps": true,
             
+        },
+        {
+            "name": "Launch Chrome",
+            "request": "launch",
+            "type": "chrome",
+            "url": "http://localhost:8080",
+            "webRoot": "${workspaceFolder}/frontend",
+            "sourceMaps": true,
         }
     ]
 }
